--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage":"https://Yamansaini0405.github.io/MoviesGalaxy",
   "name": "tailwindcss",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predelploy":"npm run build",
+    "deploy":"main -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
