--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "homepage":"https://Yamansaini0405.github.io/MoviesGalaxy",
+  
+"homepage": "https://Yamansaini0405.github.io/MoviesGalaxy",
   "name": "tailwindcss",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predelploy":"npm run build",
-    "deploy":"main -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
