--- a/package.json
+++ b/package.json
@@ -41,7 +41,13 @@
 "react-dom": "^18.3.1",
   
   
-"react-router-dom": "^6.28.0"
+"react-icons": "^5.3.0",
+  
+  
+"react-router-dom": "^6.28.0",
+  
+  
+"react-youtube": "^10.1.0"
   
 },
   
